--- a/conn-gr.html
+++ b/conn-gr.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Florida Keys eDNA Explorer</title>
+<title>Larval Connectivity for Gray’s Reef Sanctuary</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -252,13 +252,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Florida Keys eDNA Explorer</h1>
+<h1 class="title toc-ignore">Larval Connectivity for Gray’s Reef Sanctuary</h1>
 
 </div>
 
 
-<p>Direct: <a href="https://ecoquants.shinyapps.io/edna-vis/" class="uri">https://ecoquants.shinyapps.io/edna-vis/</a></p>
-<iframe frameborder="0" width="100%" height="850" src="https://ecoquants.shinyapps.io/edna-vis/">
+<p>Direct: <a href="https://graysreef.github.io" class="uri">https://graysreef.github.io</a></p>
+<iframe frameborder="0" width="100%" height="850" src="https://graysreef.github.io">
 </iframe>
 
 
