--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>MBON SDG14 Tools</title>
+<title>MBON SDG14 Apps</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -255,12 +255,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">MBON SDG14 Tools</h1>
+<h1 class="title toc-ignore">MBON SDG14 Apps</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
+<p>Welcome to the prototype tools site by the Marine Biodiversity Observation Network (MBON) working supporting Sustainable Development Goal (SDG) 14, Life in the Sea.</p>
+<p>Please peruse the applications through the menu above.</p>
+<p>This work is supported by NOAA and NASA.</p>
 
 
 
