--- a/info-sanctuaries.html
+++ b/info-sanctuaries.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Larval Connectivity for Gray’s Reef Sanctuary</title>
+<title>Sanctuaries Infographics</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -258,13 +258,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Larval Connectivity for Gray’s Reef Sanctuary</h1>
+<h1 class="title toc-ignore">Sanctuaries Infographics</h1>
 
 </div>
 
 
-<p>Direct: <a href="https://graysreef.github.io" class="uri">https://graysreef.github.io</a></p>
-<iframe frameborder="0" width="100%" height="850" src="https://graysreef.github.io">
+<p>Direct: <a href="https://marinebon.github.io/cr-metrics/" class="uri">https://marinebon.github.io/cr-metrics/</a></p>
+<iframe frameborder="0" width="100%" height="850" src="https://marinebon.github.io/cr-metrics/">
 </iframe>
 
 
